# Data-Sandbox-Shared-Playground

./: CONTRIBUTING.md  LICENSE  README.md  examples.py  pyproject.toml
notebooks/data_contracts/: 01_schema_evolution_breaking_changes.ipynb
notebooks/data_leakage/: 01_startup_data_leakage.ipynb  02_leakage_detection_at_scale.ipynb
notebooks/data_modeling/: 01_scd2_idempotent_upsert.ipynb
notebooks/data_privacy/: 01_pii_anonymization_leakage.ipynb
notebooks/data_quality/: 01_profiling_messy_csvs_with_dataprof.ipynb
notebooks/iot_anomalies/: 01_sensor_drift_and_stuck_faults.ipynb
notebooks/orchestration_antipatterns/: 01_dag_coupling_retry_safety.ipynb
notebooks/pandas_antipatterns/: 01_stop_putting_dbs_in_columns.ipynb  02_merge_pitfalls.ipynb  03_datetime_hell.ipynb
notebooks/rust_performance/: Cargo.toml  README.md
notebooks/rust_performance/examples/: merge_benchmark.rs
notebooks/sas_migrations/: 01_finding_missing_rows.ipynb
notebooks/spark_performance/: 01_salting_skewed_groupby.ipynb  02_memory_spill_window_vs_broadcast.ipynb
notebooks/streaming_patterns/: 01_late_arriving_events_windowing.ipynb
