[project]
name = "prac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "dataprof",
    "scikit-learn",
    "seaborn",
    "plotly",
    "statsmodels",
    "jupyterlab",
    "ruff>=0.15.8",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
